[gd_scene load_steps=4 format=3 uid="uid://bggj7rngwvi48"]

[ext_resource type="Script" path="res://scenes/GameOverOverlay.gd" id="1_hu50o"]
[ext_resource type="Theme" uid="uid://b2viljn765xjf" path="res://default_theme.tres" id="2_sfq3e"]
[ext_resource type="Texture2D" uid="uid://loi6c1me1rme" path="res://assets/coin.png" id="3_2afkn"]

[node name="GameOverOverlay" type="CanvasLayer"]
script = ExtResource("1_hu50o")

[node name="Root" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Root"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Root/MarginContainer"]
layout_mode = 2
color = Color(0, 0, 0, 0.784314)

[node name="Menu" type="MarginContainer" parent="Root"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -159.0
offset_top = -123.5
offset_right = 159.0
offset_bottom = 66.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Root/Menu"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 16

[node name="Label" type="Label" parent="Root/Menu/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_sfq3e")
theme_override_font_sizes/font_size = 64
text = "Game Over"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Root/Menu/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="Root/Menu/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("2_sfq3e")
theme_override_constants/line_spacing = 0
text = "Coins gained: "
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="Root/Menu/VBoxContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("3_2afkn")
stretch_mode = 3

[node name="CoinCount" type="Label" parent="Root/Menu/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_sfq3e")
theme_override_constants/line_spacing = 0
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="Root/Menu/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="Root/Menu/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme = ExtResource("2_sfq3e")
theme_override_constants/line_spacing = 0
text = "Total coins: "
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="Root/Menu/VBoxContainer/HBoxContainer2"]
layout_mode = 2
texture = ExtResource("3_2afkn")
stretch_mode = 3

[node name="TotalCoinCount" type="Label" parent="Root/Menu/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_sfq3e")
theme_override_constants/line_spacing = 0
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ShopMenuButton" type="Button" parent="Root/Menu/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_sfq3e")
text = "Shop
"

[node name="MainMenuButton" type="Button" parent="Root/Menu/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_sfq3e")
text = "Main Menu"

[connection signal="pressed" from="Root/Menu/VBoxContainer/ShopMenuButton" to="." method="_on_shop_menu_button_pressed"]
[connection signal="pressed" from="Root/Menu/VBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
